# data-merge-application

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
apps/: app.py  config.py
apps/data_merge_app/: output_data.py  output_layout.py  survey_model.py  views.py
apps/data_merge_app/_old/: merge_data.py  merge_layout.py  output_data.py  output_layout.py  read_txt.py  views.py
apps/data_merge_app/models/: const.py  detect_encoding.py  merge_data.py  merge_layout.py  read_txt.py  recreate_dir.py  validate_condition.py
apps/data_merge_app/survey_data/: __init__.py  attribute_const.py  main_data.py  sc_data.py  survey_data.py
apps/data_merge_app/survey_layout/: __init__.py  main_layout.py  sc_layout.py  survey_layout.py
apps/data_merge_app/templates/data_merge_app/: 400.html  base.html  download.html  index.html  modal_sample.html
apps/data_visualization/: views.py
apps/data_visualization/src/chart/: chart.py
apps/data_visualization/templates/: base.html  index.html  show_graph.html
apps/static/css/: style.css  style.css.map  style.scss
apps/static/js/: customize.js  toggle.js
flaskr/apps/: app.py  config.py
flaskr/apps/data_merge_app/: forms.py  main.py  output_data.py  output_layout.py  views.py
flaskr/apps/static/: style.css  style.scss
tests/: test_merge_data.py  test_merge_layout.py  test_read_txt.py  test_rename_key.py
tests/data_merge_application/: test_merge_layout.py  test_validate_condition.py
tests/data_visualization/: test_chart.py  test_layout.py
デザイン用/: data_merge.html  modal.js  style.css
(+22 files in other folders)
