[tool.poetry]
name = "merge-sc-and-main-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "merge_sc_and_main_data"}]

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"


[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,"
max-complexity = 10